--- a/index.html
+++ b/index.html
@@ -5,8 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>rock, paper, scissors!</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <h1>
+        Lets play Rock Paper scissors
+    </h1>
+    <div>
+        <button id="rock">rock</button>
+        <button id="paper">paper</button>
+        <button id="scissor">scissor</button>
+    </div>
+    <h2 id="spielstand">0 - 0</h2>
+    <p id="message"></p>
+    <div id="tryagaindiv"><p>try again</p></div>
+
     <script src="index.js"></script>
 </body>
 </html>
