--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <button id="scissor">scissor</button>
     </div>
     <h2 id="spielstand">0 - 0</h2>
-    <p id="message"></p>
+    <p id="message">BEST OF FIVE. ROOCK, PAPEER, SCISSOORS!</p>
+    <p id="runde">0 / 5</p>
     <div id="tryagaindiv"><p>try again</p></div>
 
     <script src="index.js"></script>
